--- a/templates/create.html
+++ b/templates/create.html
@@ -5,6 +5,9 @@
   <title>Title</title>
 </head>
 <body>
+<form  method="POST" action="/logout">
+  <button type="submit">登出</button>
+</form>
 <h1>新建文章</h1>
 <form method="POST">
   <input type="text" name="title" placeholder="标题"><br></br></input>
